Add java advanced files.